# meok-coinbase-x402-receipt-mcp

./: .gitignore  .mcp.json  README.md  SECURITY.md  acp.json  llms.txt  pyproject.toml  server.json  server.py  smithery.yaml
.well-known/: agent-card.json  agent.json  mcp-server-card.json
meok_coinbase_x402_receipt_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_x402_receipt.py
