[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meok-coinbase-x402-receipt-mcp"
version = "1.0.2"
description = "MEOK Coinbase x402 Receipt MCP — signed settlement receipts for agentic payments. Base/Polygon/Solana/Lightning/Arbitrum/Optimism. MiCA Article 60 + 64 crosswalk. Stripe ACP linkage. By MEOK AI Labs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Nicholas Templeman", email = "nicholas@meok.ai" }]
keywords = ["mcp", "x402", "coinbase", "settlement-receipt", "mica", "agentic-payments", "meok"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Office/Business :: Financial",
]
dependencies = ["mcp[cli]>=1.3.0"]

[project.urls]
Homepage = "https://meok.ai/a2a"
Repository = "https://github.com/CSOAI-ORG/meok-coinbase-x402-receipt-mcp"

[project.scripts]
meok-coinbase-x402-receipt-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]
